[gd_scene load_steps=2 format=3 uid="uid://ckrvgs4hp0ff"]

[ext_resource type="Script" path="res://code/ui/player_skilltree/player_skill_tree.gd" id="1_lmuwu"]

[node name="PlayerSkillTree" type="Node2D"]
script = ExtResource("1_lmuwu")

[node name="Panel" type="Panel" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
mouse_force_pass_scroll_events = false
metadata/_edit_lock_ = true

[node name="SkillPoints" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 832.0
offset_right = 913.0
offset_bottom = 23.0
text = "Skill Point:"
metadata/_edit_lock_ = true

[node name="points" type="Label" parent="Panel/SkillPoints"]
layout_mode = 0
offset_left = 80.0
offset_right = 120.0
offset_bottom = 23.0

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
ignore_texture_size = true
metadata/_edit_lock_ = true

[node name="Player" type="Label" parent="Panel/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Player"
horizontal_alignment = 3
vertical_alignment = 3
uppercase = true
metadata/_edit_lock_ = true

[node name="Attack" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel/Attack"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_force_pass_scroll_events = false
text = "Attack
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="Panel/Attack"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Back"
metadata/_edit_lock_ = true

[node name="SwordLine" type="Line2D" parent="Panel/Attack"]
z_index = -1
position = Vector2(940, 520)
points = PackedVector2Array(12, 16, -44, -232)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="AttackControl" type="Control" parent="Panel/Attack"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="LineControl" type="Control" parent="Panel/Attack/AttackControl"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="SwordLines" type="Control" parent="Panel/Attack/AttackControl/LineControl"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Line2D" type="Line2D" parent="Panel/Attack/AttackControl/LineControl/SwordLines"]
z_index = -1
position = Vector2(872, 272)
points = PackedVector2Array(-64, -184, -200, -240)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="Line2D2" type="Line2D" parent="Panel/Attack/AttackControl/LineControl/SwordLines"]
z_index = -1
position = Vector2(872, 272)
points = PackedVector2Array(24, 8, -32, -176)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="Line2D3" type="Line2D" parent="Panel/Attack/AttackControl/LineControl/SwordLines"]
z_index = -1
position = Vector2(872, 272)
points = PackedVector2Array(-320, -232, -536, -232)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="Line2D4" type="Line2D" parent="Panel/Attack/AttackControl/LineControl/SwordLines"]
z_index = -1
position = Vector2(872, 272)
points = PackedVector2Array(24, 16, -160, -160)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="Line2D5" type="Line2D" parent="Panel/Attack/AttackControl/LineControl/SwordLines"]
z_index = -1
position = Vector2(872, 272)
points = PackedVector2Array(24, 16, -280, -136)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="Line2D6" type="Line2D" parent="Panel/Attack/AttackControl/LineControl/SwordLines"]
z_index = -1
position = Vector2(872, 272)
points = PackedVector2Array(24, 16, -448, -176)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="Line2D7" type="Line2D" parent="Panel/Attack/AttackControl/LineControl/SwordLines"]
z_index = -1
position = Vector2(872, 272)
points = PackedVector2Array(24, 16, -464, -104)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="Line2D8" type="Line2D" parent="Panel/Attack/AttackControl/LineControl/SwordLines"]
z_index = -1
position = Vector2(872, 272)
points = PackedVector2Array(-464, -104, -664, -104)
width = 5.0
default_color = Color(0.564706, 0.278431, 0.0431373, 1)
metadata/_edit_lock_ = true

[node name="SlingshotLines" type="Control" parent="Panel/Attack/AttackControl/LineControl"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="SpearLines" type="Control" parent="Panel/Attack/AttackControl/LineControl"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Sword" type="Label" parent="Panel/Attack/AttackControl"]
layout_mode = 0
offset_left = 872.0
offset_top = 272.0
offset_right = 929.0
offset_bottom = 320.0
text = "Sword"
metadata/_edit_lock_ = true

[node name="Cross Slash" type="Button" parent="Panel/Attack/AttackControl/Sword"]
layout_mode = 0
offset_left = -96.0
offset_top = -192.0
offset_bottom = -161.0
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
toggle_mode = true
text = "Cross Slash"
metadata/_edit_lock_ = true

[node name="Starburst Stream" type="Button" parent="Panel/Attack/AttackControl/Sword"]
layout_mode = 0
offset_left = -336.0
offset_top = -256.0
offset_right = -195.0
offset_bottom = -225.0
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
toggle_mode = true
text = "Starburst Stream"
metadata/_edit_lock_ = true

[node name="Meteor Strike" type="Button" parent="Panel/Attack/AttackControl/Sword"]
layout_mode = 0
offset_left = -656.0
offset_top = -256.0
offset_right = -528.0
offset_bottom = -216.0
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
toggle_mode = true
text = "Meteor Strike"
metadata/_edit_lock_ = true

[node name="Parry" type="Button" parent="Panel/Attack/AttackControl/Sword"]
layout_mode = 0
offset_left = -192.0
offset_top = -176.0
offset_right = -142.0
offset_bottom = -145.0
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
toggle_mode = true
text = "Parry"
metadata/_edit_lock_ = true

[node name="Knight\'s Wheel" type="Button" parent="Panel/Attack/AttackControl/Sword"]
layout_mode = 0
offset_left = -360.0
offset_top = -152.0
offset_right = -237.0
offset_bottom = -121.0
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
toggle_mode = true
text = "Knight's Wheel
"
metadata/_edit_lock_ = true

[node name="Sonic Slash" type="Button" parent="Panel/Attack/AttackControl/Sword"]
layout_mode = 0
offset_left = -504.0
offset_top = -192.0
offset_right = -410.0
offset_bottom = -161.0
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
toggle_mode = true
text = "Sonic Slash"
metadata/_edit_lock_ = true

[node name="Side Step" type="Button" parent="Panel/Attack/AttackControl/Sword"]
layout_mode = 0
offset_left = -504.0
offset_top = -120.0
offset_right = -425.0
offset_bottom = -89.0
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
toggle_mode = true
text = "Side Step"
metadata/_edit_lock_ = true

[node name="Shadow Walk" type="Button" parent="Panel/Attack/AttackControl/Sword"]
layout_mode = 0
offset_left = -752.0
offset_top = -120.0
offset_right = -640.0
offset_bottom = -89.0
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
toggle_mode = true
text = "Shadow Walk"
metadata/_edit_lock_ = true

[node name="Slingshot" type="Label" parent="Panel/Attack/AttackControl"]
layout_mode = 0
offset_left = 688.0
offset_top = 496.0
offset_right = 759.0
offset_bottom = 544.0
text = "Slingshot"
metadata/_edit_lock_ = true

[node name="Spear" type="Label" parent="Panel/Attack/AttackControl"]
layout_mode = 0
offset_left = 760.0
offset_top = 368.0
offset_right = 817.0
offset_bottom = 416.0
text = "Spear"
metadata/_edit_lock_ = true

[node name="Passive" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_top = 540.0
offset_right = 960.0
offset_bottom = 1080.0
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel/Passive"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_force_pass_scroll_events = false
text = "Passive"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="Panel/Passive"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Back"
metadata/_edit_lock_ = true

[node name="PassiveControl" type="Control" parent="Panel/Passive"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Pet" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 960.0
offset_right = 1920.0
offset_bottom = 540.0
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel/Pet"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_force_pass_scroll_events = false
text = "Pet"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="Panel/Pet"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Back"
metadata/_edit_lock_ = true

[node name="PetControl" type="Control" parent="Panel/Pet"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Exploration" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 960.0
offset_top = 540.0
offset_right = 1920.0
offset_bottom = 1080.0
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Panel/Exploration"]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_force_pass_scroll_events = false
text = "Exploration"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="Panel/Exploration"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Back"
metadata/_edit_lock_ = true

[node name="ExplorationControl" type="Control" parent="Panel/Exploration"]
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Panel"]
position = Vector2(960, 540)
metadata/_edit_lock_ = true

[node name="Popup" type="Popup" parent="Panel"]
title = "Attention"
initial_position = 1
borderless = false

[node name="Attention" type="Label" parent="Panel/Popup"]
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="Panel/Attack" to="." method="attackButtonPressed"]
[connection signal="pressed" from="Panel/Attack/Button" to="." method="backButtonPressed"]
[connection signal="toggled" from="Panel/Attack/AttackControl/Sword/Cross Slash" to="." method="crossSlashToggled"]
[connection signal="toggled" from="Panel/Attack/AttackControl/Sword/Starburst Stream" to="." method="starBurstStreamToggle"]
[connection signal="toggled" from="Panel/Attack/AttackControl/Sword/Meteor Strike" to="." method="meteorStrikeToggle"]
[connection signal="toggled" from="Panel/Attack/AttackControl/Sword/Parry" to="." method="parryToggle"]
[connection signal="toggled" from="Panel/Attack/AttackControl/Sword/Knight\'s Wheel" to="." method="knightsWheelToggle"]
[connection signal="toggled" from="Panel/Attack/AttackControl/Sword/Sonic Slash" to="." method="sonicSlashToggle"]
[connection signal="toggled" from="Panel/Attack/AttackControl/Sword/Side Step" to="." method="sideStepToggle"]
[connection signal="toggled" from="Panel/Attack/AttackControl/Sword/Shadow Walk" to="." method="shadowWalkToggle"]
[connection signal="pressed" from="Panel/Passive" to="." method="passiveButtonPressed"]
[connection signal="pressed" from="Panel/Passive/Button" to="." method="backButtonPressed"]
[connection signal="pressed" from="Panel/Pet" to="." method="petButtonPressed"]
[connection signal="pressed" from="Panel/Pet/Button" to="." method="backButtonPressed"]
[connection signal="pressed" from="Panel/Exploration" to="." method="explorationButtonPressed"]
[connection signal="pressed" from="Panel/Exploration/Button" to="." method="backButtonPressed"]
